--- a/DSFBX.Core/DSFBX.Core.csproj
+++ b/DSFBX.Core/DSFBX.Core.csproj
@@ -67,8 +67,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TeximpNet, Version=1.3.0.0, Culture=neutral, PublicKeyToken=7c35138f0d61254b, processorArchitecture=MSIL">
+      <HintPath>..\packages\TeximpNet.1.3.0\lib\net40\TeximpNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DDSHelper.cs" />
     <Compile Include="Solvers\BoneSolver.cs" />
     <Compile Include="DSFBXContentBuildLogger.cs" />
     <Compile Include="DSFBXGenericEventArgs.cs" />
@@ -113,5 +117,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Fody.2.0.0\build\netstandard1.4\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.2.0.0\build\netstandard1.4\Fody.targets'))" />
+    <Error Condition="!Exists('..\packages\TeximpNet.1.3.0\build\TeximpNet.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\TeximpNet.1.3.0\build\TeximpNet.targets'))" />
   </Target>
+  <Import Project="..\packages\TeximpNet.1.3.0\build\TeximpNet.targets" Condition="Exists('..\packages\TeximpNet.1.3.0\build\TeximpNet.targets')" />
 </Project>
