--- a/DSFBX.Core/packages.config
+++ b/DSFBX.Core/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Fody" version="2.0.0" targetFramework="net47" developmentDependency="true" />
   <package id="log4net" version="1.2.10" targetFramework="net47" />
+  <package id="TeximpNet" version="1.3.0" targetFramework="net47" />
   <package id="Xna_Content_Pipeline" version="1.0.0" targetFramework="net47" />
 </packages>
