--- a/DSFBX.ImporterGUI/DSFBX.ImporterGUI.csproj
+++ b/DSFBX.ImporterGUI/DSFBX.ImporterGUI.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ArmorExtension.cs" />
     <Compile Include="DSFBXConfig.cs" />
     <Compile Include="DSFBXContext.cs" />
     <Compile Include="MainWindow.xaml.cs">
